# pure-styles

./: default.nix  pure-styles.cabal
src/Pure/Data/: Styles.hs
src/Pure/Data/Styles/: Functions.hs  Orphans.hs  Patterns.hs
